--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>AffiliateApp - Earn Money by Sharing Posts</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f9; color: #333; }
-        header { background: #0073e6; color: #fff; text-align: center; padding: 2rem; position: relative; overflow: hidden; }
-        header h1 { margin: 0; font-size: 2.5rem; }
-        header p { margin: 0.5rem 0; }
-        .cta-buttons { margin-top: 1rem; }
-        .cta-buttons a { background: #fff; color: #0073e6; padding: 0.7rem 1.2rem; text-decoration: none; border-radius: 5px; margin: 0 0.5rem; transition: transform 0.3s ease; }
+        header { background: url('https://source.unsplash.com/1600x900/?business,marketing') no-repeat center/cover; color: #fff; text-align: center; padding: 4rem 2rem; position: relative; overflow: hidden; }
+        header h1 { margin: 0; font-size: 3rem; animation: fadeIn 2s ease-in-out; }
+        header p { margin: 0.5rem 0; animation: fadeIn 2.5s ease-in-out; }
+        .cta-buttons { margin-top: 1rem; animation: fadeIn 3s ease-in-out; }
+        .cta-buttons a { background: #0073e6; color: #fff; padding: 0.7rem 1.2rem; text-decoration: none; border-radius: 5px; margin: 0 0.5rem; transition: transform 0.3s ease; }
         .cta-buttons a:hover { transform: scale(1.05); }
 
         section { padding: 2rem; max-width: 800px; margin: 0 auto; text-align: center; }
@@ -21,6 +21,8 @@
         .step { flex: 1 1 250px; margin: 1rem; background: #fff; padding: 1rem; border-radius: 10px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease; }
         .step:hover { transform: translateY(-10px); }
 
+        .step img { width: 100px; height: 100px; margin-bottom: 1rem; }
+
         footer { background: #0073e6; color: #fff; text-align: center; padding: 1rem; }
 
         form { display: flex; flex-direction: column; max-width: 400px; margin: 0 auto; }
@@ -28,6 +30,8 @@
         form input:focus, form textarea:focus { box-shadow: 0 0 10px rgba(0, 115, 230, 0.2); }
         form button { background: #0073e6; color: #fff; padding: 0.8rem; border: none; border-radius: 5px; cursor: pointer; transition: background 0.3s ease; }
         form button:hover { background: #005bb5; }
+
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
         @media (max-width: 768px) {
             .steps { flex-direction: column; }
@@ -37,7 +41,14 @@
     </style>
 </head>
 <body>
-    <header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#how-it-works">How It Works</a>
+        <a href="#features">Features</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <header id="home">
         <h1>AffiliateApp</h1>
         <p>Earn Money by Sharing Posts</p>
         <div class="cta-buttons">
@@ -50,14 +61,17 @@
         <h2>How It Works</h2>
         <div class="steps">
             <div class="step">
+                <img src="https://source.unsplash.com/100x100/?signup" alt="Sign Up">
                 <h3>1. Sign Up</h3>
                 <p>Create an account easily.</p>
             </div>
             <div class="step">
+                <img src="https://source.unsplash.com/100x100/?promotion" alt="Promote">
                 <h3>2. Promote Products</h3>
                 <p>Choose products to share and create posts.</p>
             </div>
             <div class="step">
+                <img src="https://source.unsplash.com/100x100/?money" alt="Earn Money">
                 <h3>3. Earn Money</h3>
                 <p>Track your earnings in your wallet.</p>
             </div>
@@ -71,11 +85,6 @@
             <li>Earnings Dashboard</li>
             <li>In-App Wallet</li>
         </ul>
-    </section>
-
-    <section id="screenshots">
-        <h2>Screenshots</h2>
-        <p>App previews coming soon.</p>
     </section>
 
     <section id="contact">
@@ -93,3 +102,4 @@
     </footer>
 </body>
 </html>
+
