--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AffiliateApp - Earn Money by Sharing Posts</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f9; color: #333; }
-        header { background: url('https://source.unsplash.com/1600x900/?business,marketing') no-repeat center/cover; color: #fff; text-align: center; padding: 4rem 2rem; position: relative; overflow: hidden; }
+        header { background: url('https://images.unsplash.com/photo-1542744173-8e7e53415bb0') no-repeat center/cover; color: #fff; text-align: center; padding: 4rem 2rem; position: relative; overflow: hidden; }
         header h1 { margin: 0; font-size: 3rem; animation: fadeIn 2s ease-in-out; }
         header p { margin: 0.5rem 0; animation: fadeIn 2.5s ease-in-out; }
         .cta-buttons { margin-top: 1rem; animation: fadeIn 3s ease-in-out; }
@@ -61,17 +61,17 @@
         <h2>How It Works</h2>
         <div class="steps">
             <div class="step">
-                <img src="https://source.unsplash.com/100x100/?signup" alt="Sign Up">
+                <img src="https://images.unsplash.com/photo-1581091870623-2a7e0c7d7037" alt="Sign Up">
                 <h3>1. Sign Up</h3>
                 <p>Create an account easily.</p>
             </div>
             <div class="step">
-                <img src="https://source.unsplash.com/100x100/?promotion" alt="Promote">
+                <img src="https://images.unsplash.com/photo-1573164574048-3fdf4f76d1b7" alt="Promote">
                 <h3>2. Promote Products</h3>
                 <p>Choose products to share and create posts.</p>
             </div>
             <div class="step">
-                <img src="https://source.unsplash.com/100x100/?money" alt="Earn Money">
+                <img src="https://images.unsplash.com/photo-1560932688-bbbf3b810019" alt="Earn Money">
                 <h3>3. Earn Money</h3>
                 <p>Track your earnings in your wallet.</p>
             </div>
@@ -102,4 +102,3 @@
     </footer>
 </body>
 </html>
-
