--- a/index.html
+++ b/index.html
@@ -17,77 +17,73 @@
         section { padding: 2rem; max-width: 800px; margin: 0 auto; text-align: center; }
         section h2 { font-size: 2rem; margin-bottom: 1rem; }
 
-        .steps { display: flex; flex-wrap: wrap; justify-content: center; }
-        .step { flex: 1 1 250px; margin: 1rem; background: #fff; padding: 1rem; border-radius: 10px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease; }
-        .step:hover { transform: translateY(-10px); }
-
-        .step img { width: 100px; height: 100px; margin-bottom: 1rem; }
-
         footer { background: #0073e6; color: #fff; text-align: center; padding: 1rem; }
 
-        form { display: flex; flex-direction: column; max-width: 400px; margin: 0 auto; }
-        form input, form textarea { margin-bottom: 1rem; padding: 0.8rem; border: 1px solid #ddd; border-radius: 5px; transition: box-shadow 0.3s ease; }
-        form input:focus, form textarea:focus { box-shadow: 0 0 10px rgba(0, 115, 230, 0.2); }
-        form button { background: #0073e6; color: #fff; padding: 0.8rem; border: none; border-radius: 5px; cursor: pointer; transition: background 0.3s ease; }
-        form button:hover { background: #005bb5; }
+        nav { background: #0073e6; padding: 1rem 0; text-align: center; }
+        nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; transition: color 0.3s ease; }
+        nav a:hover { color: #f4f4f9; }
 
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        @media (max-width: 768px) {
-            .steps { flex-direction: column; }
-            .cta-buttons { display: flex; flex-direction: column; }
-            .cta-buttons a { margin: 0.5rem 0; }
-        }
+        .button-primary { background: #28a745; color: #fff; padding: 0.8rem 1.5rem; text-decoration: none; border-radius: 5px; display: inline-block; margin: 1rem 0; transition: background 0.3s ease; }
+        .button-primary:hover { background: #218838; }
+
+        .page { display: none; }
+        .page.active { display: block; }
+
+        .back-button { background: #dc3545; color: #fff; padding: 0.5rem 1rem; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 1rem; }
+        .back-button:hover { background: #c82333; }
     </style>
+    <script>
+        function showPage(pageId) {
+            document.querySelectorAll('.page').forEach(page => page.classList.remove('active'));
+            document.getElementById(pageId).classList.add('active');
+        }
+    </script>
 </head>
 <body>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#how-it-works">How It Works</a>
-        <a href="#features">Features</a>
-        <a href="#contact">Contact</a>
+        <a href="#home" onclick="showPage('home')">Home</a>
+        <a href="#signup" onclick="showPage('signup')">Sign Up</a>
+        <a href="#promote" onclick="showPage('promote')">Promote Products</a>
+        <a href="#earn" onclick="showPage('earn')">Earn Money</a>
+        <a href="#contact" onclick="showPage('contact')">Contact</a>
     </nav>
 
-    <header id="home">
-        <h1>AffiliateApp</h1>
-        <p>Earn Money by Sharing Posts</p>
-        <div class="cta-buttons">
-            <a href="#" class="button">Download on Google Play</a>
-            <a href="#" class="button">Download on App Store</a>
-        </div>
-    </header>
-
-    <section id="how-it-works">
-        <h2>How It Works</h2>
-        <div class="steps">
-            <div class="step">
-                <img src="https://images.unsplash.com/photo-1581091870623-2a7e0c7d7037" alt="Sign Up">
-                <h3>1. Sign Up</h3>
-                <p>Create an account easily.</p>
+    <div id="home" class="page active">
+        <header>
+            <h1>AffiliateApp</h1>
+            <p>Earn Money by Sharing Posts</p>
+            <div class="cta-buttons">
+                <a href="#signup" onclick="showPage('signup')">Get Started</a>
             </div>
-            <div class="step">
-                <img src="https://images.unsplash.com/photo-1573164574048-3fdf4f76d1b7" alt="Promote">
-                <h3>2. Promote Products</h3>
-                <p>Choose products to share and create posts.</p>
-            </div>
-            <div class="step">
-                <img src="https://images.unsplash.com/photo-1560932688-bbbf3b810019" alt="Earn Money">
-                <h3>3. Earn Money</h3>
-                <p>Track your earnings in your wallet.</p>
-            </div>
-        </div>
-    </section>
+        </header>
+    </div>
 
-    <section id="features">
-        <h2>Features</h2>
-        <ul>
-            <li>Affiliate Post Creation</li>
-            <li>Earnings Dashboard</li>
-            <li>In-App Wallet</li>
-        </ul>
-    </section>
+    <div id="signup" class="page">
+        <h2>Sign Up</h2>
+        <p>Join AffiliateApp and start earning money.</p>
+        <img src="https://images.unsplash.com/photo-1581091870623-2a7e0c7d7037" alt="Sign Up">
+        <a href="#promote" class="button-primary" onclick="showPage('promote')">Next: Promote Products</a>
+        <a href="#home" class="back-button" onclick="showPage('home')">Back</a>
+    </div>
 
-    <section id="contact">
+    <div id="promote" class="page">
+        <h2>Promote Products</h2>
+        <p>Select products and share them to earn money.</p>
+        <img src="https://images.unsplash.com/photo-1573164574048-3fdf4f76d1b7" alt="Promote">
+        <a href="#earn" class="button-primary" onclick="showPage('earn')">Next: Earn Money</a>
+        <a href="#signup" class="back-button" onclick="showPage('signup')">Back</a>
+    </div>
+
+    <div id="earn" class="page">
+        <h2>Earn Money</h2>
+        <p>Track your earnings and request payouts.</p>
+        <img src="https://images.unsplash.com/photo-1560932688-bbbf3b810019" alt="Earn Money">
+        <a href="#home" class="back-button" onclick="showPage('home')">Home</a>
+    </div>
+
+    <div id="contact" class="page">
         <h2>Contact Us</h2>
         <form>
             <input type="text" placeholder="Your Name" required>
@@ -95,7 +91,7 @@
             <textarea placeholder="Your Message"></textarea>
             <button type="submit">Send Message</button>
         </form>
-    </section>
+    </div>
 
     <footer>
         <p>&copy; 2025 AffiliateApp. All rights reserved.</p>
