--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AffiliateApp - Earn Money by Sharing Posts</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f9; color: #333; }
-        header { background: url('https://images.unsplash.com/photo-1542744173-8e7e53415bb0') no-repeat center/cover; color: #fff; text-align: center; padding: 4rem 2rem; position: relative; overflow: hidden; }
+        header { background: url('https://via.placeholder.com/1600x600/0073e6/fff?text=AffiliateApp+-+Earn+Money+by+Sharing+Posts') no-repeat center/cover; color: #fff; text-align: center; padding: 4rem 2rem; position: relative; overflow: hidden; }
         header h1 { margin: 0; font-size: 3rem; animation: fadeIn 2s ease-in-out; }
         header p { margin: 0.5rem 0; animation: fadeIn 2.5s ease-in-out; }
         .cta-buttons { margin-top: 1rem; animation: fadeIn 3s ease-in-out; }
@@ -33,6 +33,8 @@
 
         .back-button { background: #dc3545; color: #fff; padding: 0.5rem 1rem; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 1rem; }
         .back-button:hover { background: #c82333; }
+
+        img { width: 100%; max-width: 400px; height: auto; }
     </style>
     <script>
         function showPage(pageId) {
@@ -63,23 +65,21 @@
     <div id="signup" class="page">
         <h2>Sign Up</h2>
         <p>Join AffiliateApp and start earning money.</p>
-        <img src="https://images.unsplash.com/photo-1581091870623-2a7e0c7d7037" alt="Sign Up">
+        <img src="https://via.placeholder.com/400x300/28a745/fff?text=Sign+Up+Image" alt="Sign Up">
         <a href="#promote" class="button-primary" onclick="showPage('promote')">Next: Promote Products</a>
-        <a href="#home" class="back-button" onclick="showPage('home')">Back</a>
     </div>
 
     <div id="promote" class="page">
         <h2>Promote Products</h2>
         <p>Select products and share them to earn money.</p>
-        <img src="https://images.unsplash.com/photo-1573164574048-3fdf4f76d1b7" alt="Promote">
+        <img src="https://via.placeholder.com/400x300/f39c12/fff?text=Promote+Products" alt="Promote">
         <a href="#earn" class="button-primary" onclick="showPage('earn')">Next: Earn Money</a>
-        <a href="#signup" class="back-button" onclick="showPage('signup')">Back</a>
     </div>
 
     <div id="earn" class="page">
         <h2>Earn Money</h2>
         <p>Track your earnings and request payouts.</p>
-        <img src="https://images.unsplash.com/photo-1560932688-bbbf3b810019" alt="Earn Money">
+        <img src="https://via.placeholder.com/400x300/0073e6/fff?text=Earn+Money" alt="Earn Money">
         <a href="#home" class="back-button" onclick="showPage('home')">Home</a>
     </div>
 
