--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
     <script>
         function showPage(pageId) { 
-            document.querySelectorAll('.container').forEach(page => page.style.display = 'none');
-            document.getElementById(pageId).style.display = 'block';
+            document.querySelectorAll('.container').forEach(page => page.classList.remove('active'));
+            document.getElementById(pageId).classList.add('active');
         }
 
         function createPost() { const content = document.getElementById('post-content').value.trim(); const image = document.getElementById('image-preview').src; const productLink = document.getElementById('post-product').value.trim(); if (content || image) { document.getElementById('feed').innerHTML += `<div class='post'>${content} ${image ? `<img src='${image}' class='image-preview'>` : ''} ${productLink ? `<a href='${productLink}' target='_blank' class='product-link'>View Product</a>` : ''}</div>`; document.getElementById('post-content').value = ''; document.getElementById('post-product').value = ''; document.getElementById('image-preview').src = ''; document.getElementById('image-preview').style.display = 'none'; } }
